--- a/.github/workflows/verify_yaml_files.yml
+++ b/.github/workflows/verify_yaml_files.yml
@@ -14,6 +14,9 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r tests/requirements-tests.txt
-    - name: Run tests
+    - name: Run schema tests
       run: |
-        py.test --disable-warnings tests/test_yaml.py
+        py.test --disable-warnings tests/test_schema.py
+    - name: Run ids tests
+      run: |
+        py.test --disable-warnings tests/test_ids.py
